UPDATED: Modificamos las rutas para dividir los proyectos: NOTEBOOK

--- a/src/app/client/models/config/navbar-config.json
+++ b/src/app/client/models/config/navbar-config.json
@@ -12,20 +12,31 @@
       "icon": "pi pi-wallet",
       "items": [
         {
-          "label": "Alvear 1065",
-          "icon": "pi pi-chevron-right",
-          "routerLink": "proyectos/alvear-1065"
+          "label": "Actuales",
+          "items": [
+            {
+              "label": "Alvear 1065",
+              "icon": "pi pi-chevron-right",
+              "routerLink": "proyectos/alvear-1065"
+            }
+          ]
         },
         {
-          "label": "Junin 2816",
-          "icon": "pi pi-chevron-right",
-          "routerLink": "proyectos/junin-2816"
-        },
-        {
-          "label": "Santa Fe 2189",
-          "icon": "pi pi-chevron-right",
-          "routerLink": "proyectos/santafe-2189"
+          "label": "Historicos",
+          "items": [
+            {
+              "label": "Junin 2816",
+              "icon": "pi pi-chevron-right",
+              "routerLink": "proyectos/junin-2816"
+            },
+            {
+              "label": "Santa Fe 2189",
+              "icon": "pi pi-chevron-right",
+              "routerLink": "proyectos/santafe-2189"
+            }
+          ]
         }
+
       ]
     },
     {
