UPDATED: Terminamos por ahora con la carga de todos los proyectos: PC

--- a/src/app/client/models/config/navbar-config.json
+++ b/src/app/client/models/config/navbar-config.json
@@ -16,7 +16,7 @@
           "items": [
 
             {
-              "label": "Axion - Roma",
+              "label": "Axion Roma",
               "routerLink": "proyectos/axion-roma",
               "icon": "pi pi-check-square"
             },
@@ -40,46 +40,79 @@
         {
           "label": "Anteriores",
           "items": [
+
             {
-              "label": "Barzola - Grúas",
+              "label": "Barzola Grúas",
               "routerLink": "proyectos/barzola-gruas",
               "icon": "pi pi-check-square"
             },
+
             {
-              "label": "Cem. Otoñal",
+              "label": "Cem Otoñal",
               "routerLink": "proyectos/cementerio-otoñal",
               "icon": "pi pi-check-square"
             },
+
             {
-              "label": "Esc. Los Padres",
-              "routerLink": "proyectos/escuela-los-padres",
+              "label": "Jockey Club",
+              "routerLink": "proyectos/jockey-club",
               "icon": "pi pi-check-square"
             },
+
             {
               "label": "Junin 2816",
               "routerLink": "proyectos/junin-2816",
               "icon": "pi pi-check-square"
             },
-            {
-              "label": "Los Molles",
-              "routerLink": "proyectos/los-molles",
-              "icon": "pi pi-check-square"
-            },
-            {
-              "label": "Orsa",
-              "routerLink": "proyectos/orsa",
-              "icon": "pi pi-check-square"
-            },
+
             {
               "label": "Santa Fe 2189",
               "routerLink": "proyectos/santafe-2189",
               "icon": "pi pi-check-square"
             },
+
             {
               "label": "Super Alem",
               "routerLink": "proyectos/super-alem",
               "icon": "pi pi-check-square"
             }
+
+          ]
+        },
+        {
+          "label": "Legado",
+          "items": [
+
+            {
+              "label": "Esc los Padres",
+              "routerLink": "proyectos/escuela-los-padres",
+              "icon": "pi pi-check-square"
+            },
+
+            {
+              "label": "Los Molles",
+              "routerLink": "proyectos/los-molles",
+              "icon": "pi pi-check-square"
+            },
+
+            {
+              "label": "Orsa",
+              "routerLink": "proyectos/orsa",
+              "icon": "pi pi-check-square"
+            },
+
+            {
+              "label": "Polo Club",
+              "routerLink": "proyectos/polo-club",
+              "icon": "pi pi-check-square"
+            },
+
+            {
+              "label": "Roma Parador",
+              "routerLink": "proyectos/roma-parador",
+              "icon": "pi pi-check-square"
+            }
+
           ]
         }
 
