--- a/angular.json
+++ b/angular.json
@@ -32,9 +32,12 @@
             "styles": [
               "src/styles.scss",
               "src/assets/styles/theme.css",
-              "src/assets/styles/primeng.min.css"
+              "src/assets/styles/primeng.min.css",
+              "node_modules/aos/dist/aos.css"
             ],
-            "scripts": []
+            "scripts": [
+              "node_modules/aos/dist/aos.js"
+            ]
           },
           "configurations": {
             "production": {
