--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser-dynamic": "^17.0.8",
     "@angular/router": "^17.0.8",
     "animate.css": "^4.1.1",
+    "aos": "^2.3.4",
     "primeicons": "^6.0.1",
     "primeng": "^17.3.1",
     "rxjs": "~7.8.0",
@@ -29,6 +30,7 @@
     "@angular-devkit/build-angular": "^17.0.9",
     "@angular/cli": "~17.0.9",
     "@angular/compiler-cli": "^17.0.8",
+    "@types/aos": "^3.0.7",
     "@types/jasmine": "~4.3.0",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
