--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
     "@angular/platform-browser": "^17.0.8",
     "@angular/platform-browser-dynamic": "^17.0.8",
     "@angular/router": "^17.0.8",
+    "@emailjs/browser": "^4.3.3",
     "animate.css": "^4.1.1",
     "aos": "^2.3.4",
     "primeicons": "^6.0.1",
     "primeng": "^17.3.1",
     "rxjs": "~7.8.0",
+    "sweetalert2": "^11.10.6",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
   },
