ajustes generales: PC

--- a/src/app/client/models/config/navbar-config.json
+++ b/src/app/client/models/config/navbar-config.json
@@ -10,6 +10,7 @@
     {
       "label": "Proyectos",
       "icon": "pi pi-wallet",
+      "routerLink":"./proyectos",
       "items": [
         {
           "label": "Actuales",
